# Deep-Agent-Suite

./: .gitignore  README.md  main.py  pyproject.toml  report.md  run_all_scenarios.py
data/: ledger.xlsx  sales.pptx
skills/docx/: SKILL.md
skills/pptx/: SKILL.md  editing.md  pptxgenjs.md
skills/xlsx/: SKILL.md
src/: agent.py  debug_subagents.py  ledger.xlsx  long_term_store.json  memory.py  sales.pptx  sandbox.py  scenarios.py  tools.py  tui.py
tests/: test_tools.py
